// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableHead should have a column align to center if its type is icon 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper ec-table-head__cell-wrapper--is-type-icon"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column B
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTableHead should have a column align to the right if its type is currency 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper ec-table-head__cell-wrapper--is-type-currency"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column B
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTableHead should not render if no columns are supplied 1`] = `<!--v-if-->`;

exports[`EcTableHead should render as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column B
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTableHead should render info icon with a tooltip as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-table-head__icon"
          data-ec-tooltip-mock-content="tooltip example"
          data-test="ec-table-head__tooltip-icon ec-mock ec-tooltip-mock"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-info"
          />
        </svg>
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column B
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-table-head__icon"
          data-ec-tooltip-mock-content="tooltip example"
          data-test="ec-table-head__tooltip-icon ec-mock ec-tooltip-mock"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-info"
          />
        </svg>
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-table-head__icon"
          data-ec-tooltip-mock-content="tooltip example"
          data-test="ec-table-head__tooltip-icon ec-mock ec-tooltip-mock"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-info"
          />
        </svg>
        <!--v-if-->
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTableHead should render sorting as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <!--v-if-->
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column B
        </span>
        <!--v-if-->
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <!--v-if-->
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
          <!--v-if-->
        </a>
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTableHead should render with max-width and ellipsis on the column that has the prop given 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column A
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      colspan="2"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
      style="max-width: 250px;"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text ec-table-head__cell-text--has-max-width"
        >
          Column B
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Column C
        </span>
        <!--v-if-->
        <!--v-if-->
      </span>
    </th>
    
  </tr>
</thead>
`;
